  are proposed for. This is due to not yet having information regarding the next execution
  year. This must be resolved by establishing dates when the information must be introduced
  into the database.
- update to table credits is not very correct on the of ManagementCreditLine and Service Exemption situations.



---------------------------------------------------------------------
Release 2004-04-13
---------------------------------------------------------------------

NEW FEATURES:
- Added create/edit of final degree work proposals interface to coordinators portal.
- task [#178] Publication of Final Degree Work Proposals.
- task [#177] Public Listing of Final Degree Work Proposals.
- Added definition of final degree work candidacy period interface to coordinators portal.
 - new operation in teacher area: delete a grouping.
- Master Degree Students are now allowed to enroll in execution courses and shifts

NOTES:
- updateGroupPropertiesTable.sql do an update in table GROUP_PROPERTIES ao campo ENROLMENT_BEGIN_DAY and ENROLMENT_END_DAY. 
  
 	
CHANGES:
 - change the order of the input boxes on searchStudents.jsp
 - changes in teacher area about group properties. Some details pointed by Prof. Mira da Silva like hours in enrolment date.
 (Calendar2DateTimeFieldConversion.java(nova classe), repository_gesdis.xml, struts-teacher.xml, validation_teacher.xml, 
 InfoGroupProperties, TeacherAdministrationViewerDispatchAction groupProperties methods, 
 editGroupPorperties.jsp, insertGroupPorperties.jsp, services.xml, DeleteGroupProperties(Service))
- added links to other operations, in master degree administrative office, when inside guide listing menu
- added, in master degree administrative office, in guide listing operations, 
  the possibility to search by student number
- added, in gep, the possibility to choose basic, non basic or all types of curricular courses
- fixed, in coordinator, error report when trying to view active degree curricular plan for